# Ondo

./: .env.example  .gitignore  .gitmodules  .mise.toml  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/: dependabot.yml
.github/workflows/: auto-merge-lhm.yml  ci.yml  release.yml  update-lhm.yml
scripts/: generate-icons.cjs  sync-version.cjs
src/: App.tsx  main.tsx  sentry.ts
src-lhm/: OndoHardwareMonitor.csproj  Program.cs
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsi
src-tauri/src/: app_metrics.rs  audio.rs  debug_server.rs  error_reporting.rs  fps_monitor.rs  hardware.rs  log_buffer.rs  main.rs  settings.rs  tray.rs  window_debug.rs  window_monitor.rs
src/components/: BootSequence.css  BootSequence.tsx  CpuCoreGrid.css  CpuCoreGrid.tsx  HudWidget.css  HudWidget.tsx  NetworkGraph.css  NetworkGraph.tsx  RestorePanel.css  RestorePanel.tsx  SettingsPanel.css  SettingsPanel.tsx  TemperatureGauge.css  TemperatureGauge.tsx  UpdateNotification.css  UpdateNotification.tsx
src/hooks/: useAudioDevices.ts  useHardwareData.ts  useSettings.ts  useUpdater.ts
src/styles/: App.css  global.css
src/types/: index.ts
