[package]
name = "ondo"
version = "0.1.0-beta.5"
description = "Iron Man HUD-style hardware temperature monitoring widget"
authors = ["Ondo"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
sentry = "0.46"
once_cell = "1.19"
log = "0.4"

# Windows-specific dependencies for hardware monitoring
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Wmi",
    "Win32_System_Variant",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
wmi = "0.14"

# macOS-specific dependencies for hardware monitoring
[target.'cfg(target_os = "macos")'.dependencies]
sysinfo = "0.32"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
