[package]
name = "ondo"
version = "0.1.4"
description = "Iron Man HUD-style hardware temperature monitoring widget"
authors = ["Ondo"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
sentry = "0.47"
once_cell = "1.19"
log = "0.4"
sysinfo = "0.38"

# Windows-specific dependencies for hardware monitoring
[target.'cfg(windows)'.dependencies]
windows-core = "0.62"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Graphics_Gdi",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Threading",
] }

# macOS-specific dependencies for audio and window monitoring
[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2"
core-foundation = "0.10"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
